prevent text in sidebar from overflowing into body

--- a/astropy_helpers/sphinx/themes/bootstrap-astropy/static/bootstrap-astropy.css
+++ b/astropy_helpers/sphinx/themes/bootstrap-astropy/static/bootstrap-astropy.css
@@ -415,6 +415,10 @@ div.sphinxsidebar {
     border-radius: 3px;
     background-color: #eee;
     border: 1px solid #bbb;
+    word-wrap: break-word;
+    /* overflow-wrap is the canonical name for word-wrap in the CSS3 text draft.
+    We include it here mainly for future-proofing. */
+    overflow-wrap: break-word;
 }
 
 div.sphinxsidebarwrapper {
